5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1807_2564.log
== TEST (2019-06-06 16:18:20) 
-- CODE:
golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n° de gols sofridos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    golsfeitos = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:20) 
-- CODE:
golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n° de gols sofridos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    golsfeitos = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:38) 
-- CODE:
golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    golsfeitos = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:40) 
-- CODE:
golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    golsfeitos = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:19:00) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:19:08) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:42:00) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if (size(golsfeitos) == size(golssofridos)):
	while (golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif (golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif (golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:42:34) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if (size(golsfeitos) == size(golssofridos)):
	while (golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif (golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif (golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:42:36) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if (size(golsfeitos) == size(golssofridos)):
	while (golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif (golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif (golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:42:53) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if (size(golsfeitos) == size(golssofridos)):
	while (golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif (golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
	print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif (golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:43:19) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if (size(golsfeitos) == size(golssofridos)):
	while (golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif (golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
	print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif (golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:43:40) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif(golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
	print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif(golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:54:40) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif(golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif(golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:55:21) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif(golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif(golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:55:40) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif(golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif(golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:56:29) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		elif(golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif(golsfeitos[i] < golssofridos[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:56:39) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
			vit += 1
		
		elif(golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
File "XXXX", line 17
    elif(golsfeitos[i] < golssofridos[i]):
                                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:04:48) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n° de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		if (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:04:54) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		if (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:05:20) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		
		if (golsfeitos[i] < golssofridos[i]):
			der += 1
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			
total[0] = vit
total[1] = emp
total[2] = der
print(total)			
		
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:06:12) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

if(size(golsfeitos) == size(golssofridos)):
	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		total[0] = vit
		
		if (golsfeitos[i] < golssofridos[i]):
			der += 1
			total[2] = der
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			total[1] = emp
			
print(total)			
		
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:06:58) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

	while(golsfeitos[i] > golssofridos[i]):
		vit += 1
		total[0] = vit
		
		if (golsfeitos[i] < golssofridos[i]):
			der += 1
			total[2] = der
			
		elif(golsfeitos[i] == golssofridos[i]):
			emp += 1
			total[1] = emp
			
print(total)			
		
	



-- ERROR:
File "XXXX", line 13
    while(golsfeitos[i] > golssofridos[i]):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:07:15) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

while(golsfeitos[i] > golssofridos[i]):
	vit += 1
	total[0] = vit
		
	if (golsfeitos[i] < golssofridos[i]):
		der += 1
		total[2] = der
			
	elif(golsfeitos[i] == golssofridos[i]):
		emp += 1
		total[1] = emp
			
print(total)			
		
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:10:14) 
-- CODE:
from numpy import*

golsfeitos = array(eval(input("Digite o n de gols marcados: ")))
golssofridos = array(eval(input("Digite o n de gols sofridos: ")))

total = zeros(3, dtype=int)

i = 0
vit = 0
emp = 0
der = 0

for i in range(0, size(golsfeitos):
	vit += 1
	total[0] = vit
		
	if (golsfeitos[i] < golssofridos[i]):
		der += 1
		total[2] = der
			
	elif(golsfeitos[i] == golssofridos[i]):
		emp += 1
		total[1] = emp
			
print(total)			
		
	



-- ERROR:
File "XXXX", line 13
    for i in range(0, size(golsfeitos):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:35:53) 
-- CODE:
from numpy import*
gols = array(eval(input("Digite: "))
gols2 = array(eval(input("Digite: "))
resultado = zeros(3, dtype=int)

for i in range(0,size(gols)):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
print(resultado)
		
	



-- ERROR:
File "XXXX", line 3
    gols2 = array(eval(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:36:30) 
-- CODE:
from numpy import*
gols = array(eval(input("Digite: ")))
gols2 = array(eval(input("Digite: ")))
resultado = zeros(3, dtype=int)

for i in range(0,size(gols)):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
print(resultado)
		
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 18:36:52) 
-- CODE:
from numpy import*
gols = array(eval(input("Digite: ")))
gols2 = array(eval(input("Digite: ")))
resultado = zeros(3, dtype=int)

for i in range(0,size(gols)):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
print(resultado)
		
	



-- EXECUTION TIME:
1.07627
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
